Fix 455273: "From <end-with>" filter fails to identify sender when they also have a name

BUG: 455273
FIXED-IN: 5.21.0